Fix SwirlResourceListItem meta text alignment when control slot is empty (#1438)

--- a/packages/swirl-components/src/components/swirl-resource-list-item/swirl-resource-list-item.css
+++ b/packages/swirl-components/src/components/swirl-resource-list-item/swirl-resource-list-item.css
@@ -45,6 +45,12 @@
       --swirl-badge-border-color: var(--s-background-hovered);
     }
   }
+
+  &:not(.resource-list-item--has-control) {
+    & .resource-list-item__control {
+      display: none;
+    }
+  }
 }
 
 .resource-list-item--interactive {
